# proyectoIG

./: CMakeLists.txt
recursosNoMetidos/Descargas/Cortinas/: uploads_files_4180038_pinch+pleat+curtain.mtl
recursosNoMetidos/Descargas/Paredes/: red_brick_03_1k.blend
recursosNoMetidos/Descargas/Suelo/: parket-13-77653-3dlancer-net.rar
recursosNoMetidos/Descargas/Tele/: Smart_TV_-_.obj_.mtl.rar
recursosNoMetidos/Descargas/Tronco/: WoodenLog_obj.rar
recursosNoMetidos/Descargas/Vela/: uploads_files_1012459_candle+heather.blend  uploads_files_1012459_candle+heather.fbx  uploads_files_1012459_candle+heather.mtl  uploads_files_2336673_Fire_ABC.rar  uploads_files_4079559_textures.rar
recursosNoMetidos/shaders/: fshader.glsl  vshader.glsl
src/: Model.cpp  Model.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  main.cpp
